test/should-fail/vsgc3994sub.f3
/**
 * @subtest vsgc3994.f3
 */

public class vsgc3994sub {
   public var x;
}
